workspace-sf/force-app/main/default/objects/MegaDayReport__mdt/MegaDayReport__mdt.object-meta.xml
<CustomObject>
    <description>Este metadado é responsável por armazenar os parametros utilizados para geração das consultas necessárias para gerar o arquivo que será enviado via e-mail.</description>
    <label>Mega Day Relatório</label>
    <pluralLabel>Mega Day Relatórios</pluralLabel>
</CustomObject>