workspace-sf/force-app/main/default/objects/MegaDayReport__mdt/fields/Coberturas__c.field-meta.xml
<CustomField>
    <fullName>Coberturas__c</fullName>
    <label>Coberturas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>