workspace-sf/force-app/main/default/objects/MegaDayReport__mdt/fields/EmailDestinatarios__c.field-meta.xml
<CustomField>
    <fullName>EmailDestinatarios__c</fullName>
    <label>Email Destinatarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>