workspace-sf/force-app/main/default/objects/MegaDayReport__mdt/fields/Ramos__c.field-meta.xml
<CustomField>
    <fullName>Ramos__c</fullName>
    <label>Ramos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>